--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -207,10 +207,10 @@ body {
   display: flex;
   position: absolute;
   width: 100%;
-  top: 80%;
+  top: 70%;
 }
 .footer img {
-  width: 90px;
+  width: 25%;
 }
 .footer a {
   color: white;
