--- a/Views/Registrarse.html
+++ b/Views/Registrarse.html
@@ -4,28 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='../CSS/Estilos.css' rel='stylesheet' type='text/css'>
+    <link href='../CSS/Estilos-Registrarse.css' rel='stylesheet' type='text/css'>
+    <!-- <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Registro|GrupoMind</title>
 </head>
 <body>
-    <div class="Registration"> 
-        <h1 style="color: white;"> Registro | GrupoMind</h1><br>
-        <form method="post">
-            <input id="Identificacion" type="number" placeholder="Identificacion" required="required" />
-            <input id="Nombres" type="text" placeholder="Nombres" required="required" />
-            <input id="Apellidos" type="text" placeholder="Apellidos" required="required" />
-            <input id="Rango" type="text" placeholder="Rango" required="required" />
-            <input class="Apadrinados" id="Apadrinado" type="text" placeholder="Apadrinado 1" required="required" />
-            <input class="Apadrinados2" id="Apadrinado2" type="text" placeholder="Apadrinado 2" required="required" />
-            <input id="Comunidad" type="text" placeholder="Comunidad" required="required" />
-            <input id="Telefono" type="number" placeholder="Télefono" required="required" />
-            <input id="Correo" type="email" placeholder="Correo" required="required" />
-            <input id="FechaNacimiento" type="date" placeholder="Fecha de Nacimiento" required="required" />
-            
-            <button onclick="btnRegistrarse()" type="button" class="btn btn-primary btn-block btn-large">Crear Usuario</button> <br>             
-        </form>
 
-    </div>
+        <center> <h1  style="color: white;"> Registro | GrupoMind</h1></center>
+       <div class="Formulario-registro">
+           <form method="post">
+               <div class="row">
+                   <div class="col">
+                       <input id="Identificacion" type="number" placeholder="Identificacion" required="required" />
+                   </div>
+                   <div class="col">
+                       <input id="Nombres" type="text" placeholder="Nombres" required="required" />
+                   </div>
+               </div>
+               <div class="row">
+                   <div class="col">                    
+                       <input id="Apellidos" type="text" placeholder="Apellidos" required="required" />
+                   </div>
+                   <div class="col">
+                       <input id="Rango" type="text" placeholder="Rango" required="required" />
+                   </div>
+               </div>
+               <div class="row">
+                   <div class="col">
+                       <input class="Apadrinados" id="Apadrinado" type="text" placeholder="Apadrinado 1" required="required" />                    
+                   </div>
+                   <div class="col">
+                       <input class="Apadrinados2" id="Apadrinado2" type="text" placeholder="Apadrinado 2" required="required" />
+                   </div>
+               </div>
+               <div class="row">
+                   <div class="col">                    
+                       <input id="Telefono" type="number" placeholder="Télefono" required="required" />
+                   </div>
+                   <div class="col">
+                       <input id="Comunidad" type="text" placeholder="Comunidad" required="required" />
+                   </div>                    
+                </div>
+                <div class="row">
+                   <div class="col">
+                       <input id="Correo" type="email" placeholder="Correo" required="required" />                    
+                   </div>
+                   <div class="col">
+                       <input id="FechaNacimiento" type="date" placeholder="Fecha de Nacimiento" required="required" />
+                   </div>
+                </div>
+                                   
+               <center><button onclick="btnRegistrarse()" type="button" class="btn btn-primary btn-block btn-large">Crear Usuario</button></center>             
+           </form>
+       </div> 
+      
+
+    
     <script src="../index.js"></script>
 </body>
 </html>
