Se Empezo a trabajar sobre el Documento Inicio.html y Estilos

--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -7,7 +7,15 @@
     <link href='../CSS/Estilos.css' rel='stylesheet' type='text/css'>
     <title>Inicio|GrupoMind</title>
 </head>
-<body>
-    
+<body style="color: white;">
+    <center>
+        <h1 style="margin: 0px;justify-content: center; align-items: center;display: flex;">Bienvenido a  GrupoMind</h1> <br>
+        <hr>
+    </center>
+    <h2>Hola, Nando</h2>
+    <div class="rango" style="display: flex;align-items: center;text-align: center;">
+        <h3>Tu Rango: </h3> <h3 style="color: green;margin-left: 7px;">Experto</h3>
+
+    </div>
 </body>
 </html>
