--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='../CSS/Estilos.css' rel='stylesheet' type='text/css'>
+    <!-- <link rel="stylesheet" href="../CSS/Estilos-Inicio.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Inicio|GrupoMind</title>
 </head>
-<body style="color: white;">
-    <center>
-        <h1 style="margin: 0px;justify-content: center; align-items: center;display: flex;">Bienvenido a  GrupoMind</h1> <br>
-        <hr>
-    </center>
-    <h2>Hola, Nando</h2>
-    <div class="rango" style="display: flex;align-items: center;text-align: center;">
-        <h3>Tu Rango: </h3> <h3 style="color: green;margin-left: 7px;">Experto</h3>
+<body style="color: white;background-color: #0e2852;font-size: 1.125rem;font-weight: 700;line-height: 1.75rem;margin-bottom: 0.5rem;">
+    
+    <div  style="background:#0e2852;    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);height: 45px;align-items: center;" class="row">
+        <div class="col">            
+                <h4>GrupoMind</h4>
+        </div>  
+        <div class="col">
+            <div style="float: right;">
 
+                <a href=""><img style="height: 25px;" src="../imagenes/usuario.png" alt=""></a>
+                <span>Usuario1</span>
+            </div>
+        </div>        
+    </div>
+    <div style="border-bottom: 1px solid #369;height: 40px;" class="Menu">
+        <div style="align-items: center;height: 40px;" class="row">
+            <div style="text-align: center;"class="col">
+                <a style="text-decoration: none;color: white;" href=""><img style="width: 20px;" src="../imagenes/notas.png" alt=""> TUS DATOS</a> 
+            </div>
+            <div style="text-align: center;" class="col">
+                <a style="text-decoration: none;color: white;" href=""><img style="width: 20px;" src="../imagenes/datosUsuario.png" alt=""> AGREGAR AFILIADO</a>
+            </div>
+        </div>
+    </div>
+       
+    <br>
+    
+    <h3>Hola, Nando</h3>
+    <div class="rango" style="display: flex;align-items: center;text-align: center;">
+        <h4>Tu Rango: </h4> <h4 style="color: #98ca3f;margin-left: 7px;">Experto</h4>
     </div>
 </body>
 </html>
