se agregaron la conexion de la base de datos

--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -16,7 +16,6 @@
         </div>  
         <div class="col">
             <div style="float: right;">
-
                 <a href=""><img style="height: 25px;" src="../imagenes/usuario.png" alt=""></a>
                 <span>Usuario1</span>
             </div>
@@ -38,6 +37,8 @@
     <h3>Hola, Nando</h3>
     <div class="rango" style="display: flex;align-items: center;text-align: center;">
         <h4>Tu Rango: </h4> <h4 style="color: #98ca3f;margin-left: 7px;">Experto</h4>
+        <p id="Parrafo-Datos"></p>
     </div>
+    <script src="../index.js"></script>
 </body>
 </html>
