--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -34,11 +34,12 @@
        
     <br>
     
-    <h3>Hola, Nando</h3>
+    <h3 id="greeting"> </h3>
     <div class="rango" style="display: flex;align-items: center;text-align: center;">
         <h4>Tu Rango: </h4> <h4 style="color: #98ca3f;margin-left: 7px;">Experto</h4>
         <p id="Parrafo-Datos"></p>
     </div>
     <script src="../index.js"></script>
+    <script src="../Inicio.js"></script>
 </body>
 </html>
