--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -31,14 +31,19 @@
             </div>
         </div>
     </div>
-       
-    <br>
+       <p>Registro:05/01/2022 11:25 am</p>
+       <p>Antiguedad: 5 días</p>
+       <p>Identificación: 1093227675</p>
+       <p>Nombre: Hernando Gomez Ocampo</p>
+       <p>Correo: nandy.97.go@gmail.com</p>
+       <p>Telefono: 3024278149</p>
+    <!-- <br> -->
     
-    <h3 id="greeting"> </h3>
+    <!-- <h3 id="greeting"> </h3>
     <div class="rango" style="display: flex;align-items: center;text-align: center;">
         <h4>Tu Rango: </h4> <h4 style="color: #98ca3f;margin-left: 7px;">Experto</h4>
         <p id="Parrafo-Datos"></p>
-    </div>
+    </div> -->
     <script src="../index.js"></script>
     <script src="../Inicio.js"></script>
 </body>
