--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -17,7 +17,7 @@
         <div class="col">
             <div style="float: right;">
                 <a href=""><img style="height: 25px;" src="../imagenes/usuario.png" alt=""></a>
-                <span>Usuario1</span>
+                <span>Hernando</span>
             </div>
         </div>        
     </div>
