se agrego la maqueta de los datos del usuario

--- a/Views/Inicio.html
+++ b/Views/Inicio.html
@@ -27,17 +27,21 @@
                 <a style="text-decoration: none;color: white;" href=""><img style="width: 20px;" src="../imagenes/notas.png" alt=""> TUS DATOS</a> 
             </div>
             <div style="text-align: center;" class="col">
-                <a style="text-decoration: none;color: white;" href=""><img style="width: 20px;" src="../imagenes/datosUsuario.png" alt=""> AGREGAR AFILIADO</a>
+                <a style="text-decoration: none;color: white;" href="./Registrarse.html"><img style="width: 20px;" src="../imagenes/datosUsuario.png" alt=""> AGREGAR AFILIADO</a>
             </div>
         </div>
     </div>
     <br>
-       <p>Registro:05/01/2022 11:25 am</p>
-       <p>Antiguedad: 5 días</p>
-       <p>Identificación: 1093227675</p>
-       <p>Nombre: Hernando Gomez Ocampo</p>
-       <p>Correo: nandy.97.go@gmail.com</p>
-       <p>Telefono: 3024278149</p>
+    <div class="Datos-User">
+        <p>Registro:05/01/2022 11:25 am</p>
+        <p>Antiguedad: 5 días</p>
+        <p>Identificación: 1093227675</p>
+        <p>Nombre: Hernando Gomez Ocampo</p>
+        <p>Correo: nandy.97.go@gmail.com</p>
+        <p>Telefono: 3024278149</p>
+
+    </div>
+    
     <!-- <br> -->
     
     <!-- <h3 id="greeting"> </h3>
